fix(ui): Fix resizing cores chart bug in KVM details page when viewed on Firefox.
Removed some leftover code that handled explicitly setting segmented bar chart width. It was no
longer necessary since the chart width is now fluid instead of locked to a base-2 number.

--- a/ui/src/app/base/components/Meter/_index.scss
+++ b/ui/src/app/base/components/Meter/_index.scss
@@ -12,6 +12,7 @@
     height: $meter-height;
     overflow: hidden;
     position: relative;
+    width: 100%;
   }
 
   .p-meter__label {
